# panda_torque_mpc

./: .gitignore  CMakeLists.txt  README.md  demo_panda_notes.txt  environment.yaml  package.xml  panda_torque_mpc.repos  panda_torque_mpc_plugins.xml  setup.py
bags/: note.txt
bindings/: CMakeLists.txt  crocoddyl_reaching.cpp  main.cpp  reduce_collision_model.cpp
bindings/panda_torque_mpc_pywrap/: __init__.py
config/: calibrated-params.yaml  collision_config_safe.yaml  collision_config_unsafe.yaml  controller_configs.yaml  default_controllers.yaml  franka_control_node.yaml  obstacle_infos.yaml  obstacle_params.yaml  plotjuggler.xml  plotjuggler_croco_reaching.xml  plotjuggler_jsid.xml  pose_publisher_params.yaml  sim_controller_configs.yaml  start_joint_pose.yaml  start_pose.yaml
docs/: demo_panda_notes.txt
franka_description/robots/panda/urdf/: demo.urdf.xacro  franka_arm.xacro  franka_hand.xacro  franka_robot.xacro
franka_description/robots/panda/urdf/t-less/: obj_23.urdf
include/panda_torque_mpc/: common.h  crocoddyl_reaching.h  ctrl_joint_space_ID.h  ctrl_log_update_dt.h  ctrl_model_pinocchio_vs_franka.h  ctrl_mpc_croco.h  ctrl_mpc_linearized.h  ctrl_playback_pd_plus.h  ctrl_task_space_ID.h  joint_space_ID_controller.h  log_update_dt.h  model_pinocchio_vs_franka_controller.h  obstacle_infos_publisher.h  obstacle_params_parser.h  pdp_joint_tracking_controller.h  python.h  reduce_collision_model.h  task_space_ID_controller.h  tsid_manipulator_reaching.h  tsid_reaching.h
launch/: crocoddyl_motion_server_node.launch  franka_control.launch  model_pinocchio_vs_franka_controller.launch  move_to_start.launch  obstacle_visualizer.launch  pose_publisher.launch  real_controller.launch  real_controllers.launch  record_cam_poses_mpc.launch  record_joint_ctrl.launch  record_rs_and_joints.launch  record_task_ctrl.launch  record_vs_demo.launch  rviz.launch  rviz_colmpc.launch  rviz_mpc_expes.launch  rviz_vs.launch  sim_controllers.launch  simulation.launch  simulation.launch~  start_gripper.launch
meshes/: camera-support.stl
meshes/t-less/: models_info.yml
msg/: JointConfigurationComparison.msg  JointValuesComparison.msg  JointVelocityComparison.msg  PoseTaskGoal.msg  TaskPoseComparison.msg  TaskTwistComparison.msg
nodes/: SDFGenerator.py  crocoddyl_motion_server_node.py  obstacle_visualizer.py  pose_publisher.py  pose_publisher_simulated_object_mvt.py  warmstart_ocp_node.py
post-treatment/: data_prune.ipynb  panda_loader.py
post-treatment/models/franka_description/robots/panda/: franka2.urdf
rviz/: colmpc.rviz  mpc_expes.rviz  object_pose_estimation.rviz  object_vs.rviz
script/: move_to_start.py  plot_dt_update.py  plot_joint_values.py  plot_mpc_tracking_error.py  plot_task_values.py  pose_publisher.py  pose_publisher_simulated_object_mvt.py  read_plot_utils.py  viz_cam_calib.py
scripts/: initialize_croco_reaching.py  mpc_utils.py  plot_joint_values.py  plot_tails.py  read_plot_utils.py  record_bag.sh
scripts/panda_torque_mpc/: initialize_croco_reaching.py  mpc_utils.py  pin_utils.py  plot_dt_update.py  plot_joint_values.py  plot_tails.py  plot_task_values.py  read_plot_utils.py  record_bag.sh  residual_reproj.py  ros_np_multiarray.py  sdf_generator.py
src/: common.cpp  croccodyl_motion_server_node.cpp  croccodyl_node.cpp  crocoddyl_motion_server_node.cpp  crocoddyl_reaching.cpp  ctrl_joint_space_ID.cpp  ctrl_log_update_dt.cpp  ctrl_model_pinocchio_vs_franka.cpp  ctrl_mpc_croco.cpp  ctrl_mpc_linearized.cpp  ctrl_playback_pd_plus.cpp  ctrl_task_space_ID.cpp  joint_space_ID_controller.cpp  log_update_dt.cpp  model_pinocchio_vs_franka_controller.cpp  obstacle_infos_publisher.cpp  obstacle_params_parser.cpp  pdp_joint_tracking_controller.cpp  task_space_ID_controller.cpp
srdf/: big_box.srdf  demo.srdf  small_box.srdf
srdf/t-less/: obj_01.srdf  obj_23.srdf
urdf/: _d435.gazebo.xacro  demo.urdf.xacro  franka_arm.xacro  franka_hand.xacro  franka_robot.xacro  panda.urdf  panda_inertias.urdf  panda_inertias_nohand.urdf  robot-gazebo.urdf  robot.urdf  support.urdf.xacro  utils.xacro
urdf/t-less/: obj_01.urdf
