<?xml version="1.0"?>
<package format="2">
  <name>panda_torque_mpc</name>
  <version>0.1.0</version>
  <description>Implementation of torque level MPC franka panda manipulator </description>
  <maintainer email="mederic.fourmy@gmail.com">Mederic Fourmy</maintainer>
  <license>Apache 2.0</license>

  <author>Mederic Fourmy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>crocoddyl</depend>
  <depend>mim_solvers</depend>
  <depend>colmpc</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>linear_feedback_controller_msgs</depend>
  <depend>tsid</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/panda_torque_mpc_plugins.xml" />
  </export>

</package>
