set(PY_NAME ${PROJECT_NAME}_pywrap)
set(PY_NAME_INSTALL_DIR ${CATKIN_GLOBAL_PYTHON_DESTINATION}/${PY_NAME})
SEARCH_FOR_BOOST_PYTHON()

set(${PY_NAME}_SOURCES
  reduce_collision_model.cpp
  crocoddyl_reaching.cpp
  main.cpp
  )

add_library(${PY_NAME} SHARED ${${PY_NAME}_SOURCES})
target_link_libraries(${PY_NAME} PUBLIC ${PROJECT_NAME} eigenpy::eigenpy)
target_include_directories(${PY_NAME} SYSTEM PRIVATE ${PYTHON_INCLUDE_DIR})
set_target_properties(${PY_NAME} PROPERTIES
  INSTALL_RPATH "\$ORIGIN/../../.."
  PREFIX ""
  SUFFIX ${PYTHON_EXT_SUFFIX}
  LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${PY_NAME_INSTALL_DIR}
)
TARGET_LINK_BOOST_PYTHON(${PY_NAME} PRIVATE)
install(TARGETS ${PY_NAME}
    ARCHIVE DESTINATION ${PY_NAME_INSTALL_DIR}
    LIBRARY DESTINATION ${PY_NAME_INSTALL_DIR}
    RUNTIME DESTINATION ${PY_NAME_INSTALL_DIR}
)

set(${PY_NAME}_PYTHON
  __init__.py
  )

foreach(python ${${PY_NAME}_PYTHON})
  file(COPY ${PY_NAME}/${python} DESTINATION ${CATKIN_DEVEL_PREFIX}/${PY_NAME_INSTALL_DIR})
  install(FILES ${python} DESTINATION ${PY_NAME_INSTALL_DIR})
endforeach()